# food-panda-etl

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
config/: default.yaml
src/: config.rs  error.rs  lib.rs  main.rs
src/clients/: http.rs  mod.rs  pool.rs
src/config/: settings.rs
src/extractors/: restaurant_extractor.rs
src/models/: mod.rs  ratings.rs  response.rs  vendor.rs
src/services/: api.rs  mod.rs  vendor.rs
src/storage/: json.rs  minio.rs  mod.rs  parquet.rs
src/utils/: http_client.rs  mod.rs  retry.rs  time.rs
