[package]
name = "foodpanda_etl"
version = "0.1.0"
edition = "2024"


[dependencies]
rquest = "3.0.5"
rquest-util = "0.2.5"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter", "local-time"] }
aws-sdk-s3 = { version = "1.79.0", features = ["behavior-version-latest"] }
aws-smithy-runtime-api = "1.7.4"
aws-config = "1.6.0"
arrow = { version = "54.2.1", features = ["json"] }
parquet = { version = "54.2.1", features = ["arrow"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
config = "0.13"
http = "1.2.0"
rand = "0.9.0"
tempfile = "3.18.0"
bytes = "1.10.1"
